[tool.poetry]
name = "toaster-utils"
version = "0.1.3"
description = "TOASTER bot local package."
repository = "https://github.com/FUNCKA-TOASTER/package.toaster-utils"
documentation = "https://github.com/FUNCKA-TOASTER/package.toaster-utils/wiki"
authors = [
    "Oidaho <oidahomain@gmail.com>"
]
license = "GPL-3.0-only"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.31"
pymysql = "^1.1.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
