[tool.poetry]
name = "toaster"
version = "0.1.9"
description = "TOASTER bot local package."
repository = "https://github.com/FUNCKA-TOASTER/package.toaster"
documentation = "https://github.com/FUNCKA-TOASTER/package.toaster/wiki"
authors = [
    "Oidaho <oidahomain@gmail.com>"
]
license = "GPL-3.0-only"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.31"
pymysql = "^1.1.1"
funcka_bots = {git = "https://github.com/FUNCKA-STALCRAFT/package.funcka-bots", branch="main"}

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
